# cookiecutter-mle-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  tox.ini
tests/: conftest.py  test_cookiecutter_template.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  _config.yml  docker-compose.yml  logging.conf  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: conf.py  make.bat
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: conftest.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/: update_db.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modelling/: features.py  load_data.py  predict.py  train.py  visualize.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: config.py
