[tool.poetry]
name = "cookiecutter-mle-template"
version = "0.1.0"
description = "generating template project for mle in aws"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.1.1"
pytest = "^7.1.2"
tox = "^3.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
