[flake8]
exclude = docs
ignore = BLK100,E231,W503
max-line-length = 88

[tool:pytest]
testpaths = tests
collect_ignore = ['setup.py']


[metadata]
name = {{cookiecutter.project_slug}}
version = {{cookiecutter.version }}
author={{ cookiecutter.author_name }}
description = {{ cookiecutter.project_short_description }}
license = {{ cookiecutter.open_source_license }}
email = {{ cookiecutter.email }}


[options]
package_dir=
    = {{cookiecutter.project_slug}}
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    numpy>=1.13.3
    scipy>=0.19.1
    scikit-learn
    awscli>=1.22.73
    boto3>=1.22.0
    diagrams>=0.21.1
    pyarrow>=8.0.0
    pandas>=1.4.0
    graphviz
    matplotlib>=2.0.0
    tqdm>=4.63.0
    sqlalchemy==1.4.36


[options.packages.find]
where={{cookiecutter.project_slug}}
